<resources>
    <string name="app_name">Scouto assignment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up.</string>
    <string name="signup">Signup</string>
    <string name="alaready_have_account">Already have an account?</string>
    <string name="login">Log In.</string>
    <string name="Login">Login</string>
    <string name="incorrect_password">Incorrect password ,Please try Again.</string>
    <string name="couldn_t_find_your_garage_account_try_to_sign_up_instead">Couldn\'t Find Your Garage Account! Try to Sign up Instead.</string>
    <string name="logout">Logout</string>
    <string name="select_model">Select Model</string>
    <string name="select_make">Select Make</string>
    <string name="add_a_new_car">Add a new car</string>
    <string name="car_model">Car Model</string>
    <string name="car_make">Car make</string>
    <string name="delete_car">Delete Car</string>
    <string name="add_image">Add Image</string>
    <string name="please_add_your_favorite_car">please add your favorite car</string>
    <string name="please_select_model">Please Select Model</string>
    <string name="please_select_make">Please Select Make</string>
    <string name="add_car">Add CAR</string>
    <string name="demo_text_please_ignore_this_text">Demo text, please ignore this text</string>
    <string name="refresh">Refresh</string>
    <string name="your_cars">Your Cars</string>
    <string name="garage_app">Garage App</string>
</resources>