<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:animateLayoutChanges="true">

    <RelativeLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="18dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="18dp"
        android:animateLayoutChanges="true">

        <LinearLayout
            android:id="@+id/dashBoardLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:text="Dashboard"
                android:textSize="36sp"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/logOutBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/logout"
                android:textAllCaps="true" />
        </LinearLayout>


        <LinearLayout

            android:id="@+id/addNewCarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dashBoardLayout"
            android:layout_marginTop="48dp"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_a_new_car"
                android:textSize="18dp"
                android:textStyle="bold" />


            <RelativeLayout
                android:id="@+id/selectMakeLayout"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="18dp"
                android:background="@drawable/rectangle_background"
                android:paddingHorizontal="12dp"
                android:paddingVertical="10dp">

                <TextView
                    android:id="@+id/selectedMakeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="6dp"
                    android:layout_toStartOf="@id/rightArrowIcon1"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/select_make"
                    android:textSize="14sp" />


                <ImageView
                    android:id="@+id/rightArrowIcon1"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:rotation="90"
                    android:src="@drawable/right_arrow_icon_indicator"
                    android:visibility="visible"
                    app:tint="@color/primary" />

            </RelativeLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/makeErrorText"
                android:text="@string/please_select_make"
                android:textAlignment="center"
                android:layout_marginTop="8dp"
                android:textSize="14sp"
                android:textColor="@color/red"
                android:visibility="gone"
                />


            <RelativeLayout
                android:id="@+id/selectModelLayout"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="18dp"
                android:background="@drawable/rectangle_background"
                android:paddingHorizontal="12dp"
                android:paddingVertical="10dp">

                <TextView
                    android:id="@+id/selectedModelTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="6dp"
                    android:layout_toStartOf="@id/rightArrowIcon2"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/select_model"
                    android:textSize="14sp" />


                <ImageView
                    android:id="@+id/rightArrowIcon2"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:rotation="90"
                    android:src="@drawable/right_arrow_icon_indicator"
                    android:visibility="visible"
                    app:tint="@color/primary" />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/modelErrorText"
                android:text="@string/please_select_model"
                android:textAlignment="center"
                android:layout_marginTop="8dp"
                android:textSize="14sp"
                android:textColor="@color/red"
                android:visibility="gone"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/refreshBtn"
                    android:layout_marginTop="18dp"
                    android:layout_weight="1"
                    android:layout_marginEnd="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/refresh"
                    android:textAllCaps="true" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/addCarBtn"
                    android:layout_marginTop="18dp"
                    android:layout_weight="1"
                    android:layout_marginStart="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/add_car"
                    android:textAllCaps="true" />


            </LinearLayout>




            <TextView
                android:layout_marginTop="24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_cars"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                >
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/carsRecyclerView"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

                <RelativeLayout
                    android:id="@+id/emptyLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentBottom="true"
                    android:visibility="gone"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/please_add_your_favorite_car"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </RelativeLayout>



            </RelativeLayout>



        </LinearLayout>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/progressBar"
        android:background="#5D000000"
        android:gravity="center"
        android:visibility="gone"
        >

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:indeterminateTint="@color/primary"
            />

    </RelativeLayout>

</RelativeLayout>

    <!--<Button-->
    <!--android:layout_gravity="center"-->
    <!--android:id="@+id/logOutBtn"-->
    <!--android:text="Logout"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"/>-->