<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        app:cardCornerRadius="4dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"

        >


        <RelativeLayout
            style="@style/customCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="12dp">

            <ImageView
                android:id="@+id/carImage"
                android:layout_alignParentStart="true"
                android:src="@mipmap/ic_icon"
                android:layout_width="120dp"
                android:layout_height="120dp"/>

            <LinearLayout
                android:layout_toEndOf="@+id/carImage"
                android:layout_marginStart="12dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                >

                <TextView
                    android:id="@+id/carMakeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/car_make"
                    android:maxLines="1"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_marginTop="8dp"
                    android:id="@+id/carModelTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/car_model"
                    android:maxLines="1"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/add_image"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/add_image"
                        android:textSize="12sp"/>

                    <com.google.android.material.button.MaterialButton
                        android:layout_marginStart="18dp"
                        android:id="@+id/deleteCar"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/delete_car"
                        android:textSize="12sp"
                        android:backgroundTint="#B3DC4646"/>

                </LinearLayout>
            </LinearLayout>




        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>


</LinearLayout>